1.问答样式 2.默认规则 3.接口日志文件

--- a/chat-web/src/styles/content.css
+++ b/chat-web/src/styles/content.css
@@ -28,7 +28,17 @@
   left: var(--x);
   top: var(--y);
 }
-.content {
+.content.user {
+  margin: 10px 0 10px 40px;
+  padding: 10px;
+  border-radius: 10px;
+  position: relative;
+  display: inline-block;
+  max-width: 90%;
+  word-wrap: break-word;
+  background-color: rgb(127, 247, 127);
+}
+.content.robot {
   margin: 10px 0 10px 40px;
   padding: 10px;
   border-radius: 10px;
