--- a/chat-web/src/styles/content.css
+++ b/chat-web/src/styles/content.css
@@ -53,10 +53,14 @@
   word-wrap: break-word;
 }
 
-.logo {
+.header {
+  padding: 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.logo {
+  margin: auto;
+  font-size: 20px;
 }
 
 .logo span {
