feat: 实现自动滚动

--- a/chat-web/src/styles/content.css
+++ b/chat-web/src/styles/content.css
@@ -144,7 +144,7 @@
   border-top: 1px solid #e8f1ff;
   font-size: 14px;
   line-height: 1.6;
-  color: #333;
+  color: #5E6772;
 }
 
 /* 正在思考中的样式 */
